# ojson

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-single-platform.yml
include/: basic_node.hpp  node.hpp  node_as_array.hpp  node_as_boolean.hpp  node_as_double.hpp  node_as_integer.hpp  node_as_string.hpp
tests/: CMakeLists.txt  basic_node_tests.cpp  node_as_array_tests.cpp  node_as_boolean_tests.cpp  node_as_double_tests.cpp  node_as_integer_tests.cpp  node_as_string_tests.cpp
